Fix bug related to empty Java files